fix: fix max-height issues on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,9 @@ html,
 body {
   padding: 0;
   margin: 0;
+  position: fixed;
+  height: 100%;
+  width: 100%;
 }
 
 * {
